fix: 'share' modal buttons' text alignment

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -136,7 +136,7 @@
 
   .icon {
     height: 3.125rem;
-    margin-left: 3.125rem;
+    margin-left: 2rem;
     width: 3.125rem;
   }
 
@@ -172,7 +172,7 @@
   .icon {
     width: 2.5rem;
     height: 2.5rem;
-    margin-left: 3.125rem;
+    margin-left: 1.5rem;
   }
 
   .fon-2 {
